<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_marginTop="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_helogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_login"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login"/>

        <TextView
            android:id="@+id/tv_wellogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_helogin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:hintTextColor="@color/darkgreen30"
            app:boxStrokeColor="@color/darkgreen15"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_wellogin">

            <com.example.medix.ui.customview.EmailEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:textColorHint="@color/grey40"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:hintTextColor="@color/darkgreen30"
            app:boxStrokeColor="@color/darkgreen15"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_email">

            <com.example.medix.ui.customview.PasswordEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey40"
                android:paddingStart="50dp"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:backgroundTint="@null"
            android:textColor="@color/grey15"
            android:background="@drawable/button_shadow"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/ti_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dontacc"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/tv_movelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:textColor="@color/darkgreen30"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>